--- a/task5/main.css
+++ b/task5/main.css
@@ -3,14 +3,15 @@ body
     font-size: 62.5%;
     padding: 0rem;
     margin: 0rem;
-    background-color: rgb(239, 240, 244);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,"Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei",SimSun, sans-serif;
 }
 
 .container
 {
+    background-color: rgb(239, 240, 244);
     padding: 0rem;
     margin: 0rem;
+    height: 100vh;
 }
 
 .header
@@ -36,9 +37,8 @@ body
 
 .title
 {
-    width: 2rem;
-    left: 50%;
-    margin-left: -1rem;
+    width: 100%;
+    text-align: center;
 }
 
 .reg 
@@ -46,6 +46,7 @@ body
     right: 1rem;
 }
 
+/* ---- */
 .user,.password
 {
     background-color: white;
