--- a/task7/vote.css
+++ b/task7/vote.css
@@ -120,31 +120,87 @@ body
 
 .user
 {
-    display: inline-block;
+    float: left; 
     width: 20vw;
     height: 20vw;
-    margin: 10px 5vw 20px 5vw;
+    margin: 3vw 5.33vw 5vw 5.33vw;
     background-color: rgb(245,201,123);
     border: 1vw solid white;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .user-name
 {
-    display: inline-block;
-    width: 100%;
-    height: 70%;
+    flex: 3;
     text-align: center;
-    position: absolute;
-    top: 25%;
-    /* transform: translateY(-50%);  */
+    line-height: 15vw; /* 其他方式无效 */
+    font-size: 15px;
 }
 
 .user-num
 {
+    flex: 1;
     text-align: center;
+    line-height: 5vw;
     background-color: rgb(131,176,154);
-    position: absolute;
-    width: 100%;
-    top: 70%;
+    font-size: 13px;  /* 防止图片缩小时高度无法继续缩小 */
 }
+
+.user-option
+{
+    display: none;
+    /* display: block; */
+    white-space: nowrap; /* 不换行 */
+    position: absolute;
+    top: 22vw;
+    left: -2px;
+}
+
+.user-option img
+{
+    display: inline-block;
+    margin-right:-3px;
+    width: 5vw;
+    height: 5vw;
+}
+
+/* 
+.user-kill
+{
+    width: calc(30px*0.5); 
+    height: calc(30px*0.5);
+    background: url('img/task7.png') calc(-328px*0.5) calc(-234px*0.5);
+    background-size: calc(417px*0.5) calc(393px*0.5); 
+}
+
+.user-search
+{
+    width: calc(30px*0.5); 
+    height: calc(30px*0.5);
+    background: url('img/task7.png') calc(-60px*0.5) calc(-353px*0.5);
+    background-size: calc(417px*0.5) calc(393px*0.5); 
+}
+
+.user-target
+{
+    width: calc(30px*0.5); 
+    height: calc(30px*0.5);
+    background: url('img/task7.png') calc(-110px*0.5) calc(-353px*0.5);
+    background-size: calc(417px*0.5) calc(393px*0.5); 
+}
+
+.user-rescue
+{
+    width: calc(30px*0.5); 
+    height: calc(30px*0.5);
+    background: url('img/task7.png') calc(-10px*0.5) calc(-353px*0.5);
+    background-size: calc(417px*0.5) calc(393px*0.5); 
+} */
+
+.user:hover .user-option
+{
+    display: block;
+}
+
